--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,8 @@ sites:
     url: https://netflix.pivrous.wtf
   - name: Telegram Bot - Lotus In Shape
     url: https://script.google.com/macros/s/AKfycbwyDBaYg_7f37_JJ8q9FLE1QH0O0EWAnwRdj0ZTP1_QFA6TNLqPjE9wTPVHCKw3goDpUQ/exec
+  - name: Mail Bot - Hypnoticus
+    url: https://script.google.com/macros/s/AKfycbwx3nl5T7pkQFWoR8Dx_wclWltXJVvNGasvQUChHK1emB-kbbgWyEXGuIMoIimL-Zp0sQ/exec
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
