--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,14 +5,19 @@ repo: status # The name of this repository
 sites:
   - name: Pivrous Blog
     url: https://pivrous.wtf/
+    icon: https://pivrous.wtf/favicon.png
   - name: Grafana
     url: https://grafana.pivrous.wtf/
+    icon: https://grafana.pivrous.wtf/public/img/fav32.png
   - name: JellyFin
     url: https://netflix.pivrous.wtf
+    icon: https://netflix.pivrous.wtf/favicon.ico
   - name: Telegram Bot - Lotus In Shape
     url: https://script.google.com/macros/s/AKfycbwyDBaYg_7f37_JJ8q9FLE1QH0O0EWAnwRdj0ZTP1_QFA6TNLqPjE9wTPVHCKw3goDpUQ/exec
+    icon: https://tiboinshape.com//shop/img/favicon.ico
   - name: Mail Bot - Hypnoticus
     url: https://script.google.com/macros/s/AKfycbwx3nl5T7pkQFWoR8Dx_wclWltXJVvNGasvQUChHK1emB-kbbgWyEXGuIMoIimL-Zp0sQ/exec
+    icon: https://www.martine-chomik-hypnose.fr/images/favicon.ico
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
