feat(config): add monitoring to LotusGears

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,6 +12,12 @@ sites:
   - name: JellyFin
     url: https://netflix.pivrous.wtf
     icon: https://netflix.pivrous.wtf/favicon.ico
+  - name: LotusGears - Backend
+    url: https://lotus-gears.herokuapp.com/status
+    icon: https://lotusgears.pivrous.wtf/favicon.ico
+  - name: LotusGears - Frontend
+    url: https://lotusfears.pivrous.wtf/
+    icon: https://lotusgears.pivrous.wtf/favicon.ico
   - name: Telegram Bot - Lotus In Shape
     url: https://script.google.com/macros/s/AKfycbwyDBaYg_7f37_JJ8q9FLE1QH0O0EWAnwRdj0ZTP1_QFA6TNLqPjE9wTPVHCKw3goDpUQ/exec
     icon: https://tiboinshape.com//shop/img/favicon.ico
